--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ asttokens==2.4.1
 attrs==24.2.0
 black==24.10.0
 certifi==2024.8.30
+cfgv==3.4.0
 charset-normalizer==3.4.0
 click==8.1.7
 comm==0.2.2
@@ -19,8 +20,10 @@ debugpy==1.8.9
 decorator==5.1.1
 dill==0.3.8
 diskcache==5.6.3
+distlib==0.3.9
 executing==2.1.0
 filelock==3.16.1
+flake8==7.1.1
 fonttools==4.55.0
 frozenlist==1.5.0
 fsspec==2024.9.0
@@ -29,10 +32,12 @@ httpcore==1.0.7
 httpx==0.27.2
 httpx-sse==0.4.0
 huggingface-hub==0.26.2
+identify==2.6.3
 idna==3.10
 iniconfig==2.0.0
 ipykernel==6.29.5
 ipython==8.29.0
+isort==5.13.2
 jedi==0.19.2
 Jinja2==3.1.4
 joblib==1.4.2
@@ -54,33 +59,40 @@ MarkupSafe==3.0.2
 marshmallow==3.23.1
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
+mccabe==0.7.0
 mpmath==1.3.0
 msgpack==1.1.0
 multidict==6.1.0
 multiprocess==0.70.16
+mypy==1.13.0
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.4.2
 nltk==3.6.2
+nodeenv==1.9.1
 numpy==1.26.4
 orjson==3.10.12
 packaging==24.2
 pandas==2.2.3
+pandas-stubs==2.2.3.241009
 parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
 pillow==11.0.0
 platformdirs==4.3.6
 pluggy==1.5.0
+pre_commit==4.0.1
 prompt_toolkit==3.0.48
 propcache==0.2.0
 psutil==6.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==18.0.0
+pycodestyle==2.12.1
 pydantic==2.10.1
 pydantic-settings==2.6.1
 pydantic_core==2.27.1
+pyflakes==3.2.0
 Pygments==2.18.0
 pyparsing==3.2.0
 pytest==8.3.3
@@ -107,10 +119,13 @@ torch==2.5.1
 tornado==6.4.1
 tqdm==4.67.0
 traitlets==5.14.3
+types-pytz==2024.2.0.20241003
+types-PyYAML==6.0.12.20240917
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+virtualenv==20.28.0
 wcwidth==0.2.13
 xxhash==3.5.0
 yarl==1.18.0
